New changes made

--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,13 @@
 body{
     font-color:#777;
 }
+
+h1{
+    text-align:center;
+    color:#222;
+}
+
+.post{
+    width: 700px;
+    margin:50px auto;
+}
